주간통계 2페이지(프래그먼트) 꺾은선 그래프 수정

--- a/AIFoodApp/app/src/main/res/report/layout/weekly_report_fragment_2.xml
+++ b/AIFoodApp/app/src/main/res/report/layout/weekly_report_fragment_2.xml
@@ -15,14 +15,21 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="■ 평균 3대 영양소 비율" />
+        android:text="■ 평균 3대 영양소 비율"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/lineChart"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lineChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_marginTop="20dp"
