--- a/AIFoodApp/app/src/main/res/report/layout/activity_weekly_report.xml
+++ b/AIFoodApp/app/src/main/res/report/layout/activity_weekly_report.xml
@@ -38,6 +38,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_week"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
