글자수 차이에 따른 레이아웃 밀림 현상 해결

--- a/AIFoodApp/app/src/main/res/report/layout/layout_report_day_sub_item.xml
+++ b/AIFoodApp/app/src/main/res/report/layout/layout_report_day_sub_item.xml
@@ -24,8 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="12dp">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/tv_sub_item_title"
@@ -39,7 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text=" kcal"
+                    android:text="kcal"
                     android:textStyle="bold" />
 
             </LinearLayout>
