--- a/AIFoodApp/app/src/main/res/main/layout/food_list_item2.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/food_list_item2.xml
@@ -39,7 +39,7 @@
                         android:src="@drawable/ic_launcher_background" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
                         android:gravity="center"
