--- a/AIFoodApp/app/src/main/res/main/layout/activity_main.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_main.xml
@@ -6,7 +6,13 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
 tools:context=".activity.MainActivity">
-
+<!--
+    <TextView
+        android:id="@+id/stepCountView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
