character 배경 투명으로 변경 / userid 공개 안하고 계정으로 나오도록(db에 email항목 추가) / 카카오,구글 아이콘 추가

--- a/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
@@ -109,16 +109,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="3">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_weight="1.5"
+            android:layout_weight="1.125"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
             android:text="아이디" />
+
+        <ImageView
+            android:id="@+id/loginFlag"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1.4"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/google_login"/>
 
         <EditText
             android:id="@+id/tv_userIdInfo"
